# tensora

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CITATION.bib  CITATION.cff  Cargo.toml  README.md  SAFETENSORS_TO_SERVERLESSLLM_PLAN.md  TESTING_PROGRESS.md  build.zig  build.zig.zon  clippy.toml  diary.md  plan.md  project_plan.tex  proposal.md  roadmap.md
.firecrawl/: checkpoint-restore-paper.md  fast26-paper.md  search-checkpoint-formats.json  search-checkpoint-loading.json  search-flexgen-deepspeed.json  search-iouring-systems.json  search-sarathi.json  search-serverless-coldstart.json  serverless-coldstart-paper.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  reproduction.md
.github/workflows/: ci.yml
.sisyphus/evidence/: task-t16-archive-contents.txt  task-t16-arxiv-checklist.txt  task-t2-claim-ledger.txt  task-t3-abstract-consistency.txt  task-t3-package-manifest.txt  task-t5-gap-statement.txt  task-t5-related-work-focus.txt  task-t6-repro-alignment.txt  task-t6-repro-bounds.txt
.sisyphus/plans/: paper-arxiv-top-venue.md
benches/: AGENTS.md  README.md  backends.rs  bench_util.rs  conversion.rs  io_profile.rs  safetensors.rs  serverlessllm.rs  storage.rs
bindings/: AGENTS.md  README.md
bindings/python/: .gitignore  AGENTS.md  README.md  pyproject.toml
bindings/python/benchmarks/: README.md  __init__.py  bench_safetensors.py  bench_serverlessllm.py  bench_vllm.py  conftest.py  fixtures.py  hub_model.py  vllm_loaders.py  vllm_runner.py
bindings/python/examples/: README.md  pytorch.py  vllm_infer.py
bindings/python/rust_ext/: Cargo.toml
bindings/python/rust_ext/src/: errors.rs  lib.rs
bindings/python/rust_ext/src/api/: convert.rs  functions.rs  handles.rs  mod.rs  runtime_async.rs  safetensors.rs  serverlessllm.rs  validation.rs
bindings/python/rust_ext/src/bridge/: mod.rs  safetensors.rs  serverlessllm.rs  types.rs
bindings/python/rust_ext/src/convert/: dtype_map.rs  mod.rs  tensorflow.rs  torch.rs
bindings/python/rust_ext/src/torch/: convert.rs  dtype_map.rs  mod.rs
bindings/python/tensor_store_py/: README.md  __init__.py  tensorflow.py  torch.py
bindings/python/tensora/: README.md  __init__.py  tensorflow.py  torch.py
bindings/python/tests/: conftest.py  fixtures.py
bindings/python/tests/integration/: __init__.py  conftest.py
bindings/python/tests/integration/safetensors/: test_pytorch.py  test_safetensors.py  test_tensorflow.py  test_tensorflow_save.py  test_torch_save.py
bindings/python/tests/integration/serverlessllm/: test_pytorch.py  test_serverlessllm.py
bindings/python/tests/unit/: __init__.py  conftest.py  test_api.py  test_vllm_loaders.py
bindings/python/tests/unit/safetensors/: test_safetensors.py
bindings/python/tests/unit/serverlessllm/: test_serverlessllm.py
experiments/: README.md  main.py  pyproject.toml
experiments/results/modal/: hf-native-baseline.tsv
experiments/src/tensora_experiments/: __init__.py  analysis.py  config.py  enums.py  infrastructure.py  matrix.py  profiler.py  report.py  result.py  vllm_config.py  vllm_profiler.py  vllm_report.py  vllm_result.py
paper/: 00README.json  AGENTS.md  README.md  arxiv_abstract_plain.txt  library.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.tex.backup  template.tex
paper/bib/: references.bib
paper/sections/: appendix_reproducibility.tex  conclusion.tex  design.tex  discussion.tex  engineering_process.tex  experimental_setup.tex  experimental_setup.tex.backup  introduction.tex  introduction.tex.backup  limitations.tex  narrative_scope.tex  professional_issues.tex  related_work.tex  results.tex  results.tex.backup
profiling/: README.md  safetensors_reader.rs  serverlessllm_reader.rs
report/final_report/: main.tex
research/: 01_serverlessllm_analysis.md  02_iouring_ecosystem.md  03_tensorstore_format_spec.md  04_performance_analysis.md  05_implementation_strategy.md  README.md
results/: 2026-03-31-h100-profiling.tsv  README.md  collective_analysis.txt
results/a100/: env.txt  rust.tsv  rust_5rep_predicted.tsv  vllm.tsv  vllm_5rep_predicted.tsv
results/h100/: anchor.tsv  rust_5rep_predicted.tsv  vllm.tsv  vllm_5rep_predicted.tsv
results/h200/: env.txt  rust.tsv  rust_5rep_predicted.tsv
results/modal/: full-anchor-matrix.tsv  held-out-validation.tsv  hf-native-baseline.tsv  targeted-anchors.tsv  vllm-load-only.tsv
scripts/: AGENTS.md  README.md  download_models.py  paper_pytest_ladder.sh  pyproject.toml  rerun_failed_vllm.sh  run_anchor_reps.sh  run_benchmarks.sh  run_full_cold_matrix.sh  run_h200_matrix.sh  run_safetensors_cold.sh  run_vllm_default_case.sh  run_vllm_full_matrix.sh  run_vllm_io_uring_case.sh  run_vllm_matrix.sh
src/: README.md  hf_model.rs  lib.rs  main.zig
src/backends/: AGENTS.md  README.md  async_io.rs  availability.rs  batch.rs  buffer_slice.rs  byte.rs  io_uring.rs  mmap.rs  mod.rs  odirect.rs  sync_io.rs
src/converters/: AGENTS.md  README.md  ids.rs  mod.rs  safetensors_to_serverlessllm.rs
src/formats/: AGENTS.md  README.md  error.rs  mod.rs  tensor.rs  (+1 more)
templates/: extended.yml
tensor_store/: .gitignore  .gitlab-ci.yml  Cargo.toml  TESTING_PROGRESS.md
tensor_store/.cargo/: config.toml
tensor_store/benches/: safetensors.rs  serverlessllm.rs  tensor_loading.rs
tensor_store/examples/: basic_load.rs  fixed_buffer_load.rs  parallel_load.rs
tensor_store/profiling/: safetensors_reader.rs  serverlessllm_reader.rs
tensor_store/scripts/: download_models.py  pyproject.toml
tensor_store/src/: lib.rs  pinned_pool.rs
tensor_store/src/backends/: async_io.rs  batch.rs  io_uring.rs  mmap.rs  mod.rs  odirect.rs  sync_io.rs
tensor_store/src/converters/: mod.rs  safetensors_to_serverlessllm.rs
tensor_store/src/loaders/: mod.rs  tokio.rs  uring.rs
tensor_store/src/loaders/backends/: async_io.rs  io_uring.rs  mod.rs
tensor_store/src/loaders/formats/safetensors/: mod.rs
tensor_store/src/readers/: safetensors.rs  serverlessllm.rs
tensor_store/src/writers/: README.md  mod.rs  safetensors.rs  serverlessllm.rs  tensorstore.rs
(+122 files in other folders)
