[package]
name = "tensora"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Adaptive checkpoint loading for large language models"
license = "Apache-2.0"
repository = "https://github.com/botirk38/tensora"
keywords = ["tensor", "storage", "io", "performance", "llm"]
categories = ["development-tools", "hardware-support"]

[lib]
name = "tensora"
path = "src/lib.rs"

[[bench]]
name = "safetensors"
harness = false

[[bench]]
name = "serverlessllm"
harness = false

[[bin]]
name = "profile"
path = "src/bin/profile/main.rs"

[[bin]]
name = "demo"
path = "src/bin/demo/main.rs"

[[bin]]
name = "convert"
path = "src/bin/convert/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
futures = "0.3"
num_cpus = "1.16"
region = "3.0.2"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0"
tokio = { version = "1.48.0", features = [
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
  "io-util",
  "time",
] }
rayon = "1.10"
memmap2 = "0.9"
zeropool = { version = "0.3.1", default-features = false }
hf-hub = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
io-uring = "0.7"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["async_tokio"] }
proptest = "1.5"
tempfile = "3.14"
tokio-test = "0.4"

[profile.release]

[profile.bench]
debug = true
