[package]
name = "tensora"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Checkpoint loading for large language models"
license = "Apache-2.0"
repository = "https://github.com/botirk38/tensora"
keywords = ["tensor", "storage", "io", "performance", "llm"]
categories = ["development-tools", "hardware-support"]

[lib]
name = "tensora"
path = "src/lib.rs"

[[bench]]
name = "safetensors"
harness = false

[[bench]]
name = "serverlessllm"
harness = false

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "storage"
harness = false

[[bin]]
name = "convert"
path = "src/bin/convert/main.rs"

[features]
default = ["sync", "mmap", "pool", "tokio", "io-uring"]
sync = ["dep:rayon", "fastio/sync"]
mmap = ["dep:memmap2", "fastio/mmap"]
pool = ["fastio/pool"]
tokio = ["dep:tokio", "dep:futures", "fastio/tokio"]
io-uring = ["fastio/io-uring"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
futures = { version = "0.3", optional = true }
fastio = { version = "0.1.1", default-features = false }
num_cpus = "1.16"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0"
tokio = { version = "1.48.0", optional = true, features = [
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
  "io-util",
  "time",
] }
rayon = { version = "1.10", optional = true }
memmap2 = { version = "0.9", optional = true }
hf-hub = "0.4"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["async_tokio"] }
proptest = "1.5"
tempfile = "3.14"
tokio-test = "0.4"

[profile.release]

[profile.bench]
debug = true
