[project]
name = "tensora-experiments"
version = "0.1.0"
description = "Modal-based experiment harness for Tensora cold-cache profiling on H100"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "modal>=0.73,<1.0",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["tensora_experiments"]

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unresolved-import = "error"

[tool.ty.environment]
python-version = "3.12"
