[package]
name = "tensor_store"
version = "0.1.0"
edition = "2024"

[lib]
name = "tensor_store"
path = "src/lib.rs"

[[bench]]
name = "tensor_loading"
harness = false


[dependencies]
parking_lot = "0.12"
region = "3.0"
safetensors = "0.6.2"
tikv-jemallocator = "0.6.0"
tokio = { version = "1", features = ["rt", "fs", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5.0" }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }


[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"


[profile.bench]
codegen-units = 1
lto = "thin"
