[package]
name = "tensor_store"
version = "0.1.0"
edition = "2024"

[lib]
name = "tensor_store"
path = "src/lib.rs"

[[bench]]
name = "tensor_loading"
harness = false


[dependencies]
libc = "0.2.177"
parking_lot = "0.12.5"
region = "3.0.2"
safetensors = "0.6.2"
tikv-jemallocator = "0.6.1"
tokio = { version = "1.48.0", features = [
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
  "io-util",
] }
zeropool = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5.0" }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }


[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"


[profile.bench]
codegen-units = 1
lto = "thin"
