[package]
name = "tensor_store"
version = "0.1.0"
edition = "2024"
description = "High-performance tensor storage library with multiple backend support"
license = "MIT"
repository = "https://github.com/botir-khaltaev/tensor_store"
keywords = ["tensor", "storage", "io", "performance"]
categories = ["development-tools", "hardware-support"]

[lib]
name = "tensor_store"
path = "src/lib.rs"

[[bench]]
name = "safetensors"
harness = false

[[bench]]
name = "serverlessllm"
harness = false

[[bin]]
name = "safetensors_reader"
path = "profiling/safetensors_reader.rs"

[[bin]]
name = "serverlessllm_reader"
path = "profiling/serverlessllm_reader.rs"

[[bin]]
name = "profile"
path = "src/bin/profile/main.rs"

[[bin]]
name = "demo"
path = "src/bin/demo/main.rs"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
num_cpus = "1.16"
region = "3.0.2"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0"
tikv-jemallocator = "0.6.1"
tokio = { version = "1.48.0", features = [
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
  "io-util",
  "time",
] }
zeropool = { version = "0.3.1", features = ["tokio-uring"] }
memmap2 = "0.9.5"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5.0" }
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
proptest = "1.5"
tempfile = "3.14"
tokio-test = "0.4"


[profile.release]


[profile.bench]
debug = true
