[project]
name = "tensora-py"
version = "0.1.0"
description = "Python bindings for tensora (PyTorch-first)"
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "tensora contributors" }]

dependencies = [
    "numpy>=2.0.2",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
tensorflow = ["tensorflow>=2.11.0"]
all = ["torch>=2.1", "tensorflow>=2.11.0"]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust_ext/Cargo.toml"
python-source = "."
module-name = "tensora._tensora_rust"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=5.2.3",
    "safetensors>=0.7.0",
    "huggingface_hub>=1.2.0",
]
torch = [
    "torch>=2.1",
    "transformers>=4.45",
    "accelerate>=0.20.0",
]
vllm = [
    "vllm>=0.6.0",
    "torch>=2.1",
    "accelerate>=0.20.0",
    "transformers>=4.45",
    "huggingface_hub>=1.2.0",
]
